[package]
name = "wry-screenshot"
version = "0.1.0"
authors = ["David Young <david.young@nccgroup.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/sciguy16/wry-screenshot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
url = "2.2"
wry = "0.5"